@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-03T16:30:15Z",
-  "count_outdated" : 222,
-  "uniques_outdated" : 105,
-  "count" : 245,
-  "uniques" : 119,
+  "timestamp" : "2022-07-04T08:31:38Z",
+  "count_outdated" : 223,
+  "uniques_outdated" : 106,
+  "count" : 246,
+  "uniques" : 120,
   "clones" : [
-    {
-      "timestamp": "2022-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-21T00:00:00Z",
       "count": 1,
@@ -91,6 +84,13 @@
     },
     {
       "timestamp": "2022-07-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
