@@ -3,11 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2022-06-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-21T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2022-07-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
